--- a/Models/-VC/2025.06.10_Pureformer-VC.md
+++ b/Models/-VC/2025.06.10_Pureformer-VC.md
@@ -124,4 +124,44 @@ The evaluation results indicate that our proposed method achieves comparable or 
 
 ## 2·Related Work
 
+### Voice Conversion
+
+Voice conversion (VC) model training can be broadly categorized into parallel and non-parallel approaches.
+
+Early parallel methods relied on utterances with identical content but varying timbres to map features.
+
+Techniques such as Gaussian Mixture Models (GMM-VC)[^Toda2007Voice], Directional Kernel Partial Least Squares (DKPLS)[^Helander2010Voice], Vector Quantization-based VC (VQ-VC)[^Wu2020One-Shot], frequency warping[^Erro2009Voice], and Non-Negative Matrix Factorization (NMF)[^Aihara2014Exemplar-Based] were frequently employed.
+
+However, these approaches often yielded overly smooth outputs and demonstrated weak generative performance.
+
+Recent technological advancements have triggered a paradigm shift toward non-parallel voice conversion, which can be systematically classified into two primary research directions:
+
+**Domain Transfer.**
+
+Domain transfer-based VC models, such as the series models of StarGAN-VC and CycleGAN-VC, treat each timbre as a domain and employ cyclic adversarial training to transform features across domains.
+
+This method facilitates the generation of more realistic and diverse speech outputs.
+
+A framework based on generative adversarial networks (GANs) has proven effective for non-parallel conversion.
+
+**Information Disentanglement.**
+
+Information disentanglement seeks to break down speech into distinct components through an encoder, including content, timbre, pitch, and rhythm, thereby allowing flexible recombination by a decoder.
+
+Representative models, such as INVC, SpeechSplit, and MAIN-VC [^Li2024Main-Vc], utilize techniques like IN and mutual information estimation to achieve effective disentanglement and reconstruction.
+
+**Generative VC.**
+
+We consider recent VC methods based on generative theory to be generative VC approaches, which include flow-based VC [^Van2022Comparison], [^Casanova2022Yourtts], KNN-based VC [^Baas2023Voice], [^Shao2025kNN-SVC], and GLL-VC (including GPT-SoVITS, etc.).
+
+In the voice conversion stage, flow-based models can invert the semantics of speech into textual information and then convert it back into speech with a new timbre.
+
+The KNN-based VC replaces the source speech's deep speech unit vectors with the given target speech.
+
+The GLL-VC models pretrain the discrete speech semantic representations using regression training and predict different speech timbres based on reference speech prompts.
+
+This evolution from parallel to non-parallel methods emphasizes the shift toward models with enhanced flexibility, robustness, and generative capabilities in VC tasks.
+
+Formally, most non-parallel VC models can be represented as $y=G(x_{s},x_{y})$, where $x_{s}$ represents the speech providing the content and $x_{y}$ represents the speech supplying the speaker's voice characteristics.
+
 #
