--- a/Models/-VC/2025.06.10_Pureformer-VC.md
+++ b/Models/-VC/2025.06.10_Pureformer-VC.md
@@ -164,4 +164,29 @@ This evolution from parallel to non-parallel methods emphasizes the shift toward
 
 Formally, most non-parallel VC models can be represented as $y=G(x_{s},x_{y})$, where $x_{s}$ represents the speech providing the content and $x_{y}$ represents the speech supplying the speaker's voice characteristics.
 
-#
+### Style Transfer Learning in VC
+
+Style transfer learning teaches VC models to merge various speech representations.
+
+Accordingly, the style transfer function accepts both source speaker-independent and target speaker-dependent representations.
+
+Chou et al. [^Chou2019One-Shot] were the first to discover that IN can filter out speaker information while retaining the source content from original utterances in INVC.
+
+Subsequently, the IN function found widespread application in GANs-based VC. [^Kaneko2019Stargan-Vc2], [^Li2021Starganv2-Vc].
+
+Furthermore, the WadaIN method implements affine operations on the convolutional kernel in Convolutional Neural Networks (CNNs), modifying the style of source data in WadaIN-VC [^Chen2021Towards] by convolving the source data.
+
+However, these models depend on CNN architectures and exhibit limited reconstruction capabilities.
+
+To leverage the self-attention mechanism in Transformers, the Attention-AdaIN-VC [^Ke2022New] incorporated the styleformer block within the CNN blocks, achieving improved VC performance.
+
+In styleformer [^Wu2021Styleformer], self-attention weights are stylized using speaker representations, successfully training an image style transfer model.
+
+In the styleformer's blocks, ASTM is commonly used to integrate individual embedding with self-attention layers.
+
+We typically incorporate ASTM into our decoder as a style transfer module. 
+
+![](figs/vaeformer.pdf)
+
+<a id='fig:1'>The architecture of Pureformer-VC.</a>
+
