--- a/Models/-VC/2025.06.10_Pureformer-VC.md
+++ b/Models/-VC/2025.06.10_Pureformer-VC.md
@@ -190,3 +190,6 @@ We typically incorporate ASTM into our decoder as a style transfer module.
 
 <a id='fig:1'>The architecture of Pureformer-VC.</a>
 
+## 3·Methodology
+
+#
