--- a/Models/-VC/2025.06.10_Pureformer-VC.md
+++ b/Models/-VC/2025.06.10_Pureformer-VC.md
@@ -192,4 +192,22 @@ We typically incorporate ASTM into our decoder as a style transfer module.
 
 ## 3·Methodology
 
+### Overall Architecture
+
+The overall architecture of Pureformer-VC is depicted in Figure [fig:1](#fig:1)(a).
+
+Pureformer-VC consists of a content encoder, a decoder, a speaker encoder, and a vocoder.
+
+We utilized a pre-trained Hifi-GAN generator [^Kong2020Hifi-Gan] as the vocoder, which remains frozen during the training stage. 
+
+We set the input feature mel-spectrogram as $x \in X^{[L, D]}$, where L denotes the frame number and D represents the number of mel filters.
+
+The content encoder $E_{c}$ extracts the posterior variances of the content representation $r_{m}, r_{s}=E_{c}(x)$.
+
+The speaker encoder $E_{s}$ generates speaker embeddings as the timbre representation $s = E_{s}(x)$ from mel-spectrograms.
+
+The decoder $E_{d}$ takes the reparameterization variance and outputs the converted spectrogram $x_{dec}$, incorporating the style embedding for transfer.
+
+It is important to note that *e* is a random variable that follows the standard normal distribution $N(0,1)$. 
+
 #
