--- a/Models/-VC/2025.06.10_Pureformer-VC.md
+++ b/Models/-VC/2025.06.10_Pureformer-VC.md
@@ -210,4 +210,56 @@ The decoder $E_{d}$ takes the reparameterization variance and outputs the conver
 
 It is important to note that *e* is a random variable that follows the standard normal distribution $N(0,1)$. 
 
+### Content Encoder with VAE Training
+
+The content encoder parameterizes and approximates the variational distribution of $q_{\phi}(z|x)$.
+
+Each Conformer block was constructed **with an IN function** and an AveragePooling1D layer following the convolution module to reduce the time dimension by half.
+
+There are four continuous blocks as shown in Figure [fig:1](#fig:1) (a); thus, the output spectrogram's frame length is decreased by 16.
+
+Finally, the content encoder outputs the reparameterization of the content representation by two convolution layers:
+
+$$
+\begin{aligned}
+
+r_m &= Mean\_Conv(h_{enc}) \\
+r_{s} &= Std\_Conv(h_{enc}) \\
+r_{c} &= r_{m} + *e**r_{s}
+
+\end{aligned}
+$$
+
+The $Mean\_Conv$ and $ Std\_Conv$ denote the two convolution layers after the output $h_{enc}$ of Conformer blocks.
+
+Thus, the variable $r_{c}$ follows a normal distribution with mean $ r_{m}$ and variance $r_{s}$.
+
+The reparameterization operation ensures that the speech latent variables input into the decoder remain typically distributed while also preserving the gradient propagation in the model.
+
+It turns out to optimize the Evidence Lower Bound (ELBO)[^Zhu2020Batch] of $log (p(x))$:
+
+$$
+
+L_{elbo} = E[logP_{\theta}(x|z)] - KL(q_{\phi}(z|x) || p(z))
+
+$$
+
+where $\phi$ denotes the encoder network and $\theta$ represents the decoder.
+
+The first term above is the
+reconstruction loss, while the second is the KullbackLeibler divergence between the approximate posterior and the prior.
+
+Thus, the VAE training loss can be summarized as:
+
+$$
+\begin{aligned}
+
+L_{vae}(x,x_{dec}) = &E\left[ |x-x_{dec}| \right] + \\
+0.5 \cdot &E[r_{c} + r_{m}^2 - log(r_{m}^2) - 1 ] 
+
+\end{aligned}
+$$
+
+The $r_{c}$ is derived from the input mel-spectrogram $x$.
+
 #
